--- a/.travis.yml
+++ b/.travis.yml
@@ -113,6 +113,7 @@ env:
     - FRAMEWORK=masonite
     - FRAMEWORK=muneem
     - FRAMEWORK=ktor
+    - FRAMEWORK=mojolicious
 
 # Lint yaml files in a specific jobs
 jobs:
