--- a/FRAMEWORKS.yml
+++ b/FRAMEWORKS.yml
@@ -348,3 +348,8 @@ kotlin:
     website: ktor.io
     version: 1.2
     language: 1.3
+perl:
+  mojolicious:
+    website: mojolicious.org
+    language: "5.28"
+    version: "latest"
